[2019-04-24 14:16:57.232] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:16:57.232] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:25:25.862] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:25:25.862] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:25:25.862] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:25:25.862] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:27:25.024] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:27:25.025] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:27:25.025] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:27:25.025] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:28:19.886] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:28:19.886] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:28:19.886] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:28:19.886] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie