@@ -68,3 +68,7 @@
 [2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 14:29:08.577] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:31:17.495] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:31:17.495] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:31:17.495] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:31:17.495] [logger] [info] Material 0 was added to project A Great Movie
